Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = for city in city_indicies[0,12]:\n",
-    "    \n",
+    "    iteration_count += 1\n",
+    "    print(\"This is iteration:\", iteration_count)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
