--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "names_and_ranks = for city in city_indicies[0,12]:\n",
     "    iteration_count += 1\n",
-    "    print(\"This is iteration:\", iteration_count)\n",
+    "    print()\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
